# component-script-rhai

./: .gitignore  Cargo.toml  README.md  component.manifest.json
.codex/: repo_overview.md
.github/workflows/: ci.yml  dev-publish.yml
ci/: local_check.sh
flows/: custom.ygtc  default.ygtc
schemas/: component.schema.json
schemas/io/: input.schema.json  output.schema.json
src/: lib.rs  model.rs  script_engine.rs
tests/: conformance.rs
