[package]
name = "component-script-rhai"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.89"
description = "Greentic component component-script-rhai"
repository = "https://github.com/component-script-rhai"
authors = ["maarten"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
greentic-types = { version = "0.4" }

[dev-dependencies]
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-node"] }
