bin = [
    { name = "hash-wasm", path = "src/bin/hash_wasm.rs" },
]

[package]
name = "component-script-rhai"
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.89"
description = "Greentic component component-script-rhai"
repository = "https://github.com/component-script-rhai"
authors = [
    "maarten",
]

[lib]
crate-type = [
    "cdylib",
    "rlib",
]

[dependencies]
serde_json = "1"
blake3 = "1"

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.greentic-types]
version = ">=1.1.0-dev, <1.2.0-0"

[dependencies.rhai]
version = "1"
features = [
    "serde",
]

[dev-dependencies]
serde_json = "1"

[target."cfg(target_arch = \"wasm32\")".dependencies.greentic-interfaces-guest]
version = ">=1.1.0-dev, <1.2.0-0"
default-features = false
features = [
    "component-v0-6",
]
